continuing configuration settings

--- a/config/apc.ini
+++ b/config/apc.ini
@@ -7,5 +7,5 @@ framedragalpha = 0.8
 
 [Logging]
 enablelogging = True
-logfilepath = C:\Users\Apogee\Documents\GitHub\Apogeeworks-Playlist-Collector\logs\apc.log
+logfilepath = D:\Github\Apogeeworks\Apogeeworks-Playlist-Collector\logs\apc.log
 
